--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -126,94 +126,7 @@
     <!--Right side-->
     <div class="right col-lg-8 col-12">
       <!-- Main projects -->
-      <section class="section mb-4">
-        <div class="card shadow-sm rounded p-4">
-          <div class="text-center pb-2" style="border-bottom: 2px solid black;">
-            <h4>Mis principales proyectos</h4>
-          </div>
-          <!--Carousel-->
-          <div id="carouselExampleFade" class="carousel slide carousel-fade mt-3" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="../assets/images/cover/1.png" class="d-block w-100" alt="Proyectos">
-              </div>
-              <div class="carousel-item">
-                <img src="../assets/images/cover/2.png" class="d-block w-100" alt="Proyectos">
-              </div>
-              <div class="carousel-item">
-                <img src="../assets/images/cover/3.png" class="d-block w-100" alt="Proyectos">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-          <!--Sugoi ne! project-->
-          <div class="project mt-3" id="proyecto_sugoi_ne">
-            <div class="p-4">
-              <div class="row">
-                <div class="col">
-                  <h5>Sugoi ne!</h5>
-                  <p>Proyecto realizado como trabajo practico del curso <a href="https://www.buenosaires.gob.ar/educacion/codo-codo" target="_blank">Codo a codo 4.0</a>.
-                  </p>
-                  <p>
-                    Consiste en una aplicación web desarrollada con <b>HTML</b>, <b>CSS</b>, y <b>JavaScript</b> que 
-                    consume la api "jikan.moe" y muestra información sobre anime, manga, y sus personajes.
-                  </p>
-                </div>
-                <div class="text-center col">
-                  <img src="../assets/images/cover/3.png" width="100%">
-                </div>
-              </div>
-              <div class="mt-2">
-                <a href="https://github.com/Furyko/sugoi-ne" target="_blank"><button class="btn btn-primary me-2">Ver el repositorio</button></a>
-                <a href="http://sugoine.netlify.app/" target="_blank"><button class="btn btn-info">Ver el sitio</button></a>
-              </div>
-            </div>
-          </div>
-          <!--Tiempo Argentina Project-->
-          <div class="project mt-3" id="proyecto_tiempo_argentina">
-            <div class="p-4">
-              <div class="row">
-                <div class="col">
-                  <h5>Tiempo Argentina</h5>
-                  <p>Consiste en una app con <b>React</b> que consume la api "ws.smn.gob.ar" y muestra datos sobre el clima actual, y el pronóstico a tres días.</p>
-                </div>
-                <div class="text-center col">
-                  <img src="../assets/images/cover/2.png" width="100%">
-                </div>
-              </div>
-              <div class="mt-2">
-                <a href="https://github.com/Furyko/argentina-weather-forecast" target="_blank"><button class="btn btn-primary me-2">Ver el repositorio</button></a>
-                <a href="https://tiempoargentina.netlify.app/" target="_blank"><button class="btn btn-info">Ver el sitio</button></a>
-              </div>
-            </div>
-          </div>
-          <!--Matanga! Project-->
-          <div class="project mt-3" id="proyecto_matanga">
-            <div class="p-4">
-              <div class="row">
-                <div class="col">
-                  <h5>Matanga!</h5>
-                  <p>Este proyecto fué realizado por un equipo de dos personas como proyecto final de la segunda etapa del <a href="https://empleo.chaco.gob.ar/informatorio" target="_blank">Informatorio</a>: Desarrollo web.</p>
-                  <p>Consiste en una aplicación web desarrollada con <b>Django</b> que representa un juego de preguntas y respuestas relacionado al aniversario de provincialización de la provincia del Chaco.</p>
-                </div>
-                <div class="text-center col">
-                  <img src="../assets/images/cover/1.png" width="100%">
-                </div>
-              </div>
-              <div class="mt-2">
-                <a href="https://github.com/Furyko/Matanga" target="_blank"><button class="btn btn-primary me-2">Ver el repositorio</button></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+      <app-projects></app-projects>
       <!-- Seccondary projects -->
       <section class="section mb-4">
         <div class="card shadow-sm rounded p-4">
