--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -27,7 +27,7 @@
         </div>
 
         <!--Matanga! Project-->
-        <div class="project mt-3" id="`${ i.idProject }`" *ngFor="let i of projects">
+        <div class="project mt-3" [id]="i.idProject" *ngFor="let i of projects">
             <div class="p-4">
                 <div class="row">
                     <div class="col">
@@ -35,12 +35,12 @@
                         <p>{{ i.description }}</p>
                     </div>
                     <div class="text-center col">
-                        <img src="`${ i.previewImg }`" width="100%">
+                        <img [src]="i.previewImg" width="100%">
                     </div>
                 </div>
                 <div class="mt-2">
-                    <a href="`${ i.urlRepo }`" target="_blank"><button class="btn btn-primary me-2">Ver el repositorio</button></a>
-                    <a href="`${ i.urlSite }`" target="_blank"><button class="btn btn-info">Ver el sitio</button></a>
+                    <a [href]="i.urlRepo" target="_blank"><button class="btn btn-primary me-2">Ver el repositorio</button></a>
+                    <a [href]="i.urlSite" target="_blank"><button class="btn btn-info">Ver el sitio</button></a>
                 </div>
             </div>
         </div>
