--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -6,14 +6,8 @@
         <!--Carousel-->
         <div id="carouselExampleFade" class="carousel slide carousel-fade mt-3" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="../assets/images/cover/1.png" class="d-block w-100" alt="Proyectos">
-                </div>
-                <div class="carousel-item">
-                    <img src="../assets/images/cover/2.png" class="d-block w-100" alt="Proyectos">
-                </div>
-                <div class="carousel-item">
-                    <img src="../assets/images/cover/3.png" class="d-block w-100" alt="Proyectos">
+                <div class="carousel-item active" *ngFor="let i of projects">
+                    <img [src]="i.previewImg" class="d-block w-100" alt="Proyectos">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
