Add studies logic

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -76,17 +76,7 @@
                   <p>👨‍💻 Me especializo en el área de Front-End, aunque también cuento con conocimiento en Back-End. Disfruto viendo cómo un software va cobrando forma, y pensando cómo puedo mejorarlo.</p>
                   <p>💻 Busco trabajar en una empresa en la que pueda crecer como desarrollador ganando experiencia, conocimiento, y habilidades.</p>
                 </div>
-                <div class="info-title" id="estudios">
-                  <h4 class="title">Estudios</h4>
-                  <ul>
-                    <li><b>Introducción a la programación</b></li>
-                    <p>Informatorio Chaco</p>
-                    <li><b>Desarrollo Web</b></li>
-                    <p>Informatorio Chaco</p>
-                    <li><b>Introducción al desarrollo de Videojuegos</b></li>
-                    <p>Infogamers Chaco</p>
-                  </ul>
-                </div>
+                <app-study></app-study>
                 <div class="info-title" id="conocimientos">
                   <h4 class="title">Conocimientos</h4>
                   <ul>
