Add backoffice children routing
Add study service

Update projects component name

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -118,7 +118,7 @@
       <!--Right side-->
       <div class="right col-lg-8 col-12">
         <!-- Main projects -->
-        <app-projects></app-projects>
+        <app-project></app-project>
         <!-- Seccondary projects -->
         <section class="section mb-4">
           <div class="card shadow-sm rounded p-4">
