Add knowledges list mapping in home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -77,17 +77,7 @@
                   <p>💻 Busco trabajar en una empresa en la que pueda crecer como desarrollador ganando experiencia, conocimiento, y habilidades.</p>
                 </div>
                 <app-study></app-study>
-                <div class="info-title" id="conocimientos">
-                  <h4 class="title">Conocimientos</h4>
-                  <ul>
-                    <li><b>Frontend</b></li>
-                    <p>HTML, CSS, JavaScript, React</p>
-                    <li><b>Backend</b></li>
-                    <p>SQL, Java, Spring, Python, Django</p>
-                    <li><b>Otras herramientas</b></li>
-                    <p>PyQt5, Postman, GIT</p>
-                  </ul>
-                </div>
+                <app-knowledge></app-knowledge>
                 <div class="info-title" id="experiencia">
                   <h4 class="title">Experiencia</h4>
                   <ul>
