Add backoffice knowledge crud

--- a/src/app/components/backoffice-nav/backoffice-nav.component.html
+++ b/src/app/components/backoffice-nav/backoffice-nav.component.html
@@ -11,6 +11,9 @@
                         <button type="button" class="list-group-item list-group-item-action" routerLinkActive="active" routerLink="/backoffice/studies">
                             Studies
                         </button>
+                        <button type="button" class="list-group-item list-group-item-action" routerLinkActive="active" routerLink="/backoffice/knowledges">
+                            Knowledges
+                        </button>
                     </div>
                 </div>
             </div>
