Add extra projects iteration in home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -110,31 +110,7 @@
         <!-- Main projects -->
         <app-project></app-project>
         <!-- Seccondary projects -->
-        <section class="section mb-4">
-          <div class="card shadow-sm rounded p-4">
-            <div class="text-center pb-2" style="border-bottom: 2px solid black;">
-              <h4>Otros proyectos</h4>
-            </div>
-            <!--Saltarina Project-->
-            <div class="project mt-3" id="proyecto_saltarina">
-              <div class="p-4">
-                <div class="row">
-                  <div class="col">
-                    <h5>Saltarina</h5>
-                    <p>Saltarina es un videojuego desarrollado como proyecto final de la segunda etapa del curso de Introducción al Desarrollo de Videojuegos de <a href="https://empleo.chaco.gob.ar/infogamers/" target="_blank">Infogamers Chaco</a>.</p>
-                    <p>Este proyecto fué desarrollado usando el motor <b>Godot Engine</b> y el lenguaje <b>GDScript</b>.</p>
-                  </div>
-                  <div class="text-center col">
-                    <img src="../assets/images/cover/3.jpg" width="100%">
-                  </div>
-                </div>
-                <div class="mt-2">
-                  <a href="https://github.com/Furyko/Saltarina" target="_blank"><button class="btn btn-primary me-2">Ver el repositorio</button></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
+        <app-extra-project></app-extra-project>
       </div>
     </div>
 </div>
