--- a/src/app/backoffice/backoffice.component.html
+++ b/src/app/backoffice/backoffice.component.html
@@ -7,8 +7,11 @@
             <div class="content p-4">
                 <!--Left side-->
                 <div class="list-group">
-                    <button type="button" class="list-group-item list-group-item-action" aria-current="true" routerLinkActive="active" routerLink="/backoffice/projects">
+                    <button type="button" class="list-group-item list-group-item-action" routerLinkActive="active" routerLink="/backoffice/projects">
                         Projects
+                    </button>
+                    <button type="button" class="list-group-item list-group-item-action" routerLinkActive="active" routerLink="/backoffice/extra-projects">
+                      Extra Projects
                     </button>
                     <button type="button" class="list-group-item list-group-item-action" routerLinkActive="active" routerLink="/backoffice/studies">
                         Studies
