Add experiences iteration in home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -78,15 +78,7 @@
                 </div>
                 <app-study></app-study>
                 <app-knowledge></app-knowledge>
-                <div class="info-title" id="experiencia">
-                  <h4 class="title">Experiencia</h4>
-                  <ul>
-                    <li><b>Matanga!</b></li>
-                    <p>Proyecto final de la etapa 2 del Informatorio Chaco.</p>
-                    <li><b>Alkemy</b></li>
-                    <p>Plataforma de entrenamiento en donde desarrolladores de software trainee aceleran y certifican sus habilidades como programadores junior productivos.</p>
-                  </ul>
-                </div>
+                <app-experience></app-experience>
                 <div class="info-title" id="ingles">
                   <h4 class="title">Nivel de inglés</h4>
                   <p>Upper Intermediate (B2)</p>
