Add contact iteration in home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -84,14 +84,7 @@
                   <p>Upper Intermediate (B2)</p>
                   <a href="https://efset.org/cert/323PqJ" target="_blank"><button class="btn btn-credential mt-1">Credencial</button></a>
                 </div>
-                <div class="info-title" id="contactar">
-                  <h4 class="title">Contacto</h4>
-                  <ul>
-                    <li>Correo: <a href="mailto:pedrojulianpalavecino@gmail.com">pedrojulianpalavecino@gmail.com</a></li>
-                    <li>LinkedIn: <a href="https://www.linkedin.com/in/julian-palavecino/" target="_blank">Julian Palavecino</a></li>
-                    <li>GitHub: <a href="https://github.com/Furyko" target="_blank">Furyko</a></li>
-                  </ul>
-                </div>
+                <app-contact></app-contact>
               </div>
             </div>
           </div>
