--- a/src/app/backoffice/backoffice.component.html
+++ b/src/app/backoffice/backoffice.component.html
@@ -22,6 +22,9 @@
                     <button type="button" class="list-group-item list-group-item-action" routerLinkActive="active" routerLink="/backoffice/experiences">
                       Experiences
                     </button>
+                    <button type="button" class="list-group-item list-group-item-action" routerLinkActive="active" routerLink="/backoffice/contacts">
+                      Contacts
+                    </button>
                 </div>
             </div>
           </div>
