--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -50,46 +50,7 @@
     <div class="row">
       <!--Left side-->
       <!--Profile-->
-      <div class="left col-lg-4 col-12">
-        <aside class="aside section mb-4">
-          <div class="card shadow-sm rounded">
-            <div class="content pt-2 ps-4 pe-4 pb-2">
-              <div class="item text-center">
-                <img class="profile-image img-fluid rounded-circle mb-2 shadow-sm" src="../assets/images/profile_picture.png" width="180" height="180">
-                <h4>Pedro Julian Palavecino</h4>
-                <h6>Desarrollador Front-End</h6>
-              </div>
-            </div>
-          </div>
-        </aside>
-        <!--About me-->
-        <aside class="aside section mb-4">
-          <div class="card shadow-sm rounded">
-            <div class="content p-4">
-              <div class="mb-3" style="border-bottom: 2px solid black;">
-                <h4>Sobre mí</h4>
-              </div>
-              <div class="info-container">
-                <div class="info-title" id="presentacion">
-                  <h4 class="title">Presentación</h4>
-                  <p>🧑 Soy estudiante de programación. Actualmente me capacito en la tercera etapa del <a href="https://empleo.chaco.gob.ar/informatorio#/" target="_blank">Informatorio de Chaco</a>: "Especialización en Tecnologías de Desarrollo".</p>
-                  <p>👨‍💻 Me especializo en el área de Front-End, aunque también cuento con conocimiento en Back-End. Disfruto viendo cómo un software va cobrando forma, y pensando cómo puedo mejorarlo.</p>
-                  <p>💻 Busco trabajar en una empresa en la que pueda crecer como desarrollador ganando experiencia, conocimiento, y habilidades.</p>
-                </div>
-                <app-study></app-study>
-                <app-knowledge></app-knowledge>
-                <app-experience></app-experience>
-                <div class="info-title" id="ingles">
-                  <h4 class="title">Nivel de inglés</h4>
-                  <p>Upper Intermediate (B2)</p>
-                  <a href="https://efset.org/cert/323PqJ" target="_blank"><button class="btn btn-credential mt-1">Credencial</button></a>
-                </div>
-                <app-contact></app-contact>
-              </div>
-            </div>
-          </div>
-        </aside>
-      </div>
+      <app-about-me class="left col-lg-4 col-12"></app-about-me>
       <!--Right side-->
       <div class="right col-lg-8 col-12">
         <!-- Main projects -->
