--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,10 +20,10 @@
                         <div class="card shadow-lg">
                             <div class="card-body p-5">
                                 <h1 class="fs-4 card-title fw-bold mb-4">Login</h1>
-                                <form method="POST" class="needs-validation" novalidate="" autocomplete="off">
+                                <form (ngSubmit)="userLogin()" class="needs-validation" novalidate="" autocomplete="off">
                                     <div class="mb-3">
                                         <label class="mb-2 text-muted" for="email">E-Mail Address</label>
-                                        <input id="email" type="email" class="form-control" name="email" value="" required autofocus>
+                                        <input id="email" type="email" class="form-control" name="email" value="" required autofocus [(ngModel)]="user.userId">
                                         <div class="invalid-feedback">
                                             Email is invalid
                                         </div>
@@ -35,7 +35,7 @@
                                                 Forgot Password?
                                             </a>
                                         </div>
-                                        <input id="password" type="password" class="form-control" name="password" required>
+                                        <input id="password" type="password" class="form-control" name="password" required [(ngModel)]="user.password">
                                         <div class="invalid-feedback">
                                             Password is required
                                         </div>
