--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -3,7 +3,7 @@
       <div class="card shadow-sm rounded">
         <div class="content pt-2 ps-4 pe-4 pb-2">
           <div class="item text-center">
-            <img class="profile-image img-fluid rounded-circle mb-2 shadow-sm" src="../assets/images/profile_picture.png" width="180" height="180">
+            <img class="profile-image img-fluid rounded-circle mb-2 shadow-sm" [src]="aboutMeList[0].profilePhoto" width="180" height="180">
             <h4>{{ aboutMeList[0].fullname }}</h4>
             <h6>{{ aboutMeList[0].profession }}</h6>
           </div>
